--- a/prospect/templates/prospect/poc_form.html
+++ b/prospect/templates/prospect/poc_form.html
@@ -1,6 +1,6 @@
 <div class="form-group">
     <p class="card-description">Contact Person {{ index }}</p>
-      <label for="{{ form.name.id_for_label }}">Name *</label>
+      <label for="{{ form.name.id_for_label }}">Name</label>
       {{ form.name }}
   </div>
   <div class="row">
