--- a/prospect/templates/prospect/update_poc.html
+++ b/prospect/templates/prospect/update_poc.html
@@ -11,7 +11,9 @@
         <div class="card-body">
           <form method="post">
             {% csrf_token %}
-            {{ prospect_form.as_p }}
+            {% for form in prospect_formset %}
+              {{ form.as_p }}
+            {% endfor %}
             <input type="hidden" name="prospect_id" value="{{ prospect_instance.uuid }}">
             <button type="submit" class="btn btn-primary">Update</button>
             <a href="{% url 'prospect:list' %}" class="btn btn-secondary">Cancel</a>
