--- a/prospect/templates/prospect/_partials/_poc_form.html
+++ b/prospect/templates/prospect/_partials/_poc_form.html
@@ -1,3 +1,4 @@
+<div class="my-3" style="padding: 1rem; background-color: #f2edf3; border-radius:5px">
 <p class="card-description">Contact Person {{ index }}</p>
 <div class="form-group">
     <label for="{{ form.name.id_for_label }}">Name</label>
@@ -20,4 +21,5 @@
 <div class="form-group">
     <label for="{{ form.remarks.id_for_label }}">Remarks</label>
     {{ form.remarks }}
+</div>
 </div>
